# RSIM

./: .gitignore  LICENSE  README.md  conda.yaml  pyproject.toml  requirements.txt  setup.py
docs/: inventory_models_guide.md
examples/: optimization_example.py  queueing_examples.py
simlib/: __init__.py  config.py
simlib/bootstrap/: __init__.py  bootstrap_ci.py  jackknife.py
simlib/core/: base.py
simlib/financial/: __init__.py  portfolio.py
simlib/inventory/: eoq.py  sq_policy.py
simlib/markov_chains/: discrete_markov.py  mcmc.py
simlib/monte_carlo/: __init__.py  integration.py  random_walk.py
simlib/networks/: epidemic_models.py  traffic_simulation.py
simlib/optimization/: __init__.py  particle_swarm.py  response_surface.py  simulated_annealing.py
simlib/queueing/: __init__.py  mm1_queue.py  mmk_queue.py  network_queues.py
simlib/reliability/: __init__.py  component_reliability.py  failure_analysis.py  maintenance_models.py  system_reliability.py
simlib/survival/: __init__.py  cox_regression.py
simlib/ui/: __init__.py
simlib/variance_reduction/: __init__.py  importance_sampling.py  stratified_sampling.py
src/RSIM/: __init__.py
src/RSIM/bootstrap/: __init__.py  cross_validation.py  permutation_tests.py
src/RSIM/core/: manager.py
src/RSIM/financial/: __init__.py  interest_rate_models.py  option_pricing.py  var_estimation.py
src/RSIM/inventory/: __init__.py  newsvendor.py  ss_policy.py
src/RSIM/markov_chains/: __init__.py  continuous_markov.py  hidden_markov.py  markov_chain_test.py
src/RSIM/monte_carlo/: __init__.py  (+3 more)
(+13 files in other folders)
