[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "RSIM"
dynamic = ["version"]
description = "A Python package for different simulation approaches"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Reza Shahriari", email = "rezshahriari@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/reza-shahriari/RSIM"
"Bug Reports" = "https://github.com/reza-shahriari/RSIM/issues"
Source = "https://github.com/reza-shahriari/RSIM"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "RSIM.__version__"}
